save as markdown

--- a/practice.ipynb
+++ b/practice.ipynb
@@ -12,43 +12,31 @@
     "Enter a row number: 5\n",
     "\n",
     "1 4 6 4 1\n",
-    "```\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 2 1\n"
-     ]
-    }
-   ],
-   "source": [
+    "```\n",
+    "### Answer\n",
+    "```python\n",
+    "# Get user input for the number of rows\n",
     "input_num = int(input(\"Enter a row number: \"))\n",
     "\n",
+    "# Initialize Pascal's Triangle with the first row\n",
     "triangle = [[1]]\n",
     "\n",
+    "# Generate Pascal's Triangle up to the input row\n",
     "while len(triangle) < input_num:\n",
-    "    last_one= triangle[-1]\n",
-    "    add_up = [1]\n",
+    "    last_one = triangle[-1]  # Get the last row\n",
+    "    add_up = [1]  # Start the new row with 1\n",
     "\n",
-    "    for i in range(1,len(last_one)):\n",
-    "        add_up.append(last_one[i-1]+last_one[i])\n",
-    "    add_up=add_up+[1]\n",
+    "    # Compute the middle values as the sum of two adjacent numbers in the previous row\n",
+    "    for i in range(1, len(last_one)):\n",
+    "        add_up.append(last_one[i-1] + last_one[i])\n",
+    "\n",
+    "    add_up.append(1)  # End the row with 1\n",
     "    triangle.append(add_up)\n",
-    "str_triangle_result=\" \".join([str(a) for a in triangle[-1]])\n",
-    "print(str_triangle_result)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "\n",
+    "# Convert the last row to a space-separated string and print it\n",
+    "str_triangle_result = \" \".join(map(str, triangle[-1]))\n",
+    "print(str_triangle_result)\n",
+    "```\n",
     "### A Game of Chess \n",
     "You place a pawn at the top left corner of an n-by-n chess board, labeled (0,0).  For each move, you have a choice: move the pawn down a single space, or move the pawn down one space and right one space.  That is, if the pawn is at position (i,j), you can move the pawn to (i+1,j) or (i+1, j+1).\n",
     "\n",
@@ -75,60 +63,32 @@
     "1 1 0 0\n",
     "1 2 1 0\n",
     "1 3 3 1\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 2,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1 0 0 0 0\n",
-      "1 1 0 0 0\n",
-      "1 2 1 0 0\n",
-      "1 3 3 1 0\n",
-      "1 4 6 4 1\n"
-     ]
-    }
-   ],
-   "source": [
+    "```\n",
+    "### Answer\n",
+    "\n",
+    "```python\n",
     "# Get the user input for the board size\n",
     "n = int(input(\"Enter a board size: \"))\n",
-    "# so each number will be above number + above left number (observed from example)\n",
     "\n",
-    "board = [[0] * n for a in range(n)] # n of [0] in a list, and n of lists\n",
+    "# Each number will be the sum of the number above and the number above-left (observed from example)\n",
+    "board = [[0] * n for a in range(n)]  # Create an n x n board initialized with 0s\n",
     "\n",
-    "board[0][0] = 1 #first num is 1 and all stated from (0 ,0), no negative \n",
+    "board[0][0] = 1  # First number is 1, starting from (0,0), no negatives\n",
     "\n",
     "for i in range(n):\n",
     "    for j in range(n):\n",
-    "        if i>0 and j==0:\n",
-    "            board[i][j] = board[i][j] + board[i-1][j] #above num for the left same col\n",
-    "        elif i>0 and j>0:\n",
-    "            board[i][j] = board[i-1][j] + board[i-1][j-1] # the rest of the cols are all: above + above left\n",
+    "        if i > 0 and j == 0:\n",
+    "            board[i][j] = board[i-1][j]  # Take the number from above for the first column\n",
+    "        elif i > 0 and j > 0:\n",
+    "            board[i][j] = board[i-1][j] + board[i-1][j-1]  # Sum of above and above-left\n",
     "\n",
-    "# join the num \n",
-    "for b in board: #b= each list, iterate all the list to print out the board\n",
-    "    print(\" \".join(map(str, b)))"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "### Bisection Search to Find a Square Root"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "# Print the board\n",
+    "for b in board:  # Iterate through each row and print it\n",
+    "    print(\" \".join(map(str, b)))\n",
+    "```\n",
+    "### Bisection Search to Find a Square Root\n",
+    "### Answer\n",
+    "```python\n",
     "\n",
     "x = float(input(\"enter a number:\"))\n",
     "\n",
@@ -179,13 +139,8 @@
     "    print('Number of guesses =', num_guesses)\n",
     "    print(ans, 'is close to square root of', x)\n",
     "else:\n",
-    "    None"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
+    "    None\n",
+    "```\n",
     "### A Flexible \"Scoring\" Function \n",
     "\n",
     "The following code defines a list of names and also contains a header for the function `best`.  The `best` function takes two arguments: a generic scoring function, score, and a list of strings, names.  Fill in the function so that it applies a score function to each string in the names list and returns the name with the highest score. If there are ties in the list, your function should return the first item with the maximum score. The `best` function needs to be designed so that it can take any scoring function and return the name with the highest score.\n",
@@ -212,15 +167,9 @@
     "\n",
     "best(number_of_vowels, names) -> 'Alexis'\n",
     "\n",
-    "```"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "```\n",
+    "### Answer\n",
+    "```python\n",
     "names = [\"Ben\", \"April\", \"Zaber\", \"Alexis\", \"McJagger\", \"J.J.\", \"Madonna\"]\n",
     "def len_score(word):\n",
     "    len_cnt=0\n",
@@ -246,13 +195,9 @@
     "        if i in vowel:\n",
     "            cnt += 1\n",
     "    return cnt\n",
-    "print(number_of_vowels('Alexis'))"
+    "\n",
+    "```\n"
    ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": []
   }
  ],
  "metadata": {
